[package]
name = "jwtkit"
version = "0.1.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "JWT tokens implementation for Rust"
homepage = "https://github.com/WatchDG/rust-jwtkit"
documentation = "https://docs.rs/jwtkit"
repository = "https://github.com/WatchDG/rust-jwtkit"
readme = "README.md"
edition = "2024"
exclude = [".trae/**", "benches/**", "tests/**"]

[dependencies]
basekit = "0.3"
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }

[features]
default = ["hs256", "hs384", "hs512"]
hs256 = ["dep:sha2", "dep:hmac"]
hs384 = ["dep:sha2", "dep:hmac"]
hs512 = ["dep:sha2", "dep:hmac"]
rs256 = ["dep:rsa", "dep:sha2"]
rs384 = ["dep:rsa", "dep:sha2"]
rs512 = ["dep:rsa", "dep:sha2"]

[dev-dependencies]
rand = "0.8"
